<resources>

    <!-- Common begin  -->
    <string name="app_name">CST2335 Final Project</string>
    <string name="first">Sunrise/Sunset</string>
    <string name="second">Recipe</string>
    <string name="third">Dictionary</string>
    <string name="forth">Deezer Song</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="question">Question: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error: </string>
    <string name="undo">Undo</string>
    <string name="deleted_message">You deleted record #</string>
    <string name="want_to_delete">Do you want to delete this term: </string>
    <string name="back">Back Home</string>
    <!-- Common end  -->


    <!--Dictionary App begin  Jianbo Tan -->
    <string name="word_activity_name">My Dictionary</string>
    <string name="word_search">Word</string>
    <string name="word_search_hint">Enter a word</string>
    <string name="word_definition">Definition</string>
    <string name="word_save">Save</string>
    <string name="word_read_history">History</string>
    <string name="word_history">History</string>
    <string name="word_database_name" translatable="false">myDictionary</string>
    <string name="record_goes_here">Record goes here</string>
    <string name="word_sharedPreferences_name" translatable="false">MyDictionary</string>
    <string name="error_word_msg">Please enter a valid word.</string>
    <string name="error_word_info">"Error encoding word"</string>
    <string name="dictionary_information">Dictionary APP supports users to look up the definition of words entered by the user. Users can save words and definitions in the database and then click the History button to view the history of words and definitions.</string>
    <string name="dictionary_info_title">Dictionary API instructions</string>
    <string name="json_utf8" translatable="false">UTF-8</string>
    <string name="json_words" translatable="false">words</string>
    <string name="json_meanings" translatable="false">meanings</string>
    <string name="json_definitions" translatable="false">definitions</string>
    <string name="json_definition" translatable="false">definition</string>
    <!--Dictionary App end  Jianbo Tan -->



    <!--recipe string-->
    <string name="fabRecipe">Your favorite recipe</string>
    <string name="recipe_delete_warning">Are you sure you want to delte the recipe?</string>
    <string name="recipe_instruction">Instruction: \\n1. the saved recipe will be displayed in recycler view\\n2. click search button to do recipe search\\n3. save button to save recipe as favourite\\n4. go back button to return to the previous page</string>
    <string name="recipe_search_int">Please enter the recipe name (pasta,soup,salad, etc)</string>
    <string name="receip_title">Search Recipe</string>
    <string name="titel">title</string>
    <string name="ingredient">ingredient</string>
    <string name="instruction">instruction</string>
    <string name="name">Name</string>
    <string name="how_to_use_interface">"How to use interface? "</string>
    <string name="favconfirmation">added successfully</string>
    <string name="waitrequest">Time is too slow for those who wait, too swift for those who fear, too long for those who grieve, too short for those who rejoice, but for those who love, time is eternity. Read more at https://www.brainyquote.com/topics/wait-quotes</string>
    <string name="recipeId">recipe id</string>

        <string name="title_activity_recipt_main">ReciptMain</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>

        <string name="menu_home">Home</string>
        <string name="menu_gallery">Gallery</string>
        <string name="menu_slideshow">Slideshow</string>
        <string name="website">Website</string>

        <string name="hint">Find a recipe or ingredient</string>
        <string name="saveBtn">Save</string>
        <string name="retrieveBtn">Retrieve</string>
        <string name="favourite_pictures">Favourite Recipes</string>
        <string name="placeholder">Recipe Picture</string>
        <string name="delete">Delete</string>
        <string name="textview">Textview</string>
        <string name="RecipeSearch">Receipe Search</string>
        <string name="go_back">Go Back</string>
        <string name="searchHint">Find a recipe </string>

        <string name="help_title">Recipe search user guidance</string>
        <string name="author">Kelly Wu</string>
        <string name="date">March 30, 2024</string>
        <string name="recipe_help">Instruction:  1. the saved recipe will be displayed in recycler view 2. click search button to do recipe search 3. save button to save recipe as favourite 4. go back button to return to the previous page</string>
        <string name="welcome_message">Discover your new favourite recipe</string>
        <string name="alreadyexisted">This recipe is already existed in the favourite list</string>
        <string name="addedMessage">You added this recipe to the favourite list</string>
        <string name="deletAlert">Do you want to delete the message?</string>
        <string name="deleteConfirm">You deleted this recipe</string>
        <string name="dataName">database name</string>
        <string name="click">click here</string>
        <string name="errorMessage">Error</string>
        <string name="searchRecipe">search recipe</string>

        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="favourite">Your favourite recipe</string>
        <string name="fav">"Saved "</string>
        <string name="empty">empty\n</string>
        <string name="fav_recipe">favorite recipe</string>
        <string name="food_name">food name</string>
        <string name="salad">salad\n</string>
        <string name="soup">soup\n</string>
        <string name="beverage">beverage</string>
        <string name="appetizer">appetizer</string>
        <string name="desserts">desserts</string>
        <string name="fingerfood">fingerfood</string>


    <!---recipe string end-->

    <!--Song App begin  Tammy Liu -->
    <string name="song_search">Song name</string>

    <string name="deezer_help_info">Steps: Enter artist name, click to select, view song details, add to favorites, and access your list with a home button.</string>
    <string name="deezer_how_to_use_the_interface">How to use the Interface?</string>
    <string name="deezer_do_you_want_to_delete_the_song">"Do you want to delete the song: "</string>
    <string name="deezer_help">Help</string>
    <string name="deezer_home">home</string>
    <string name="deezer_search">Search</string>
    <string name="ds_question">Question:</string>
    <string name="ds_no">No</string>
    <string name="ds_yes">Yes</string>
    <string name="ds_you_deleted_song">You deleted song #</string>
    <string name="ds_undo">Undo</string>
    <string name="ds_acquiring_result">Acquiring Result......</string>
    <string name="ds_please_type_artist_name">Please type artist name</string>
    <string name="ds_album">Album:</string>
    <string name="ds_song_title">Song Title:</string>
    <string name="ds_textview">TextView</string>
    <string name="ds_duration">Duration:</string>
    <string name="ds_rank">Rank</string>
    <string name="ds_title">Title</string>
    <string name="ds_rank2">Rank:</string>
    <string name="ds_fans">Fans</string>
    <string name="ds_name">Name</string>
    <string name="ds_album2">Album:</string>
    <string name="ds_fans2">Fans:</string>


    <!--Song App end  Tammy Liu -->


    <!--SunLookup App begin  Yue Shang -->
    <string name="Latitude">Latitude</string>
    <string name="Enter_number" >Enter number</string>
    <string name="Result" >Result</string>
    <string name="yueword_save" >Save</string>
    <string name="word_favorite" >Favorite</string>
    <string name="Longitude">Longitude</string>
    <string name="yueword_history">History</string>
    <string name="Lat____Long" translatable="false">Lat           Long</string>
    <string name="sunlookup_information">The APP looks up sunrise and sunset times based on the latitude and longitude entered by the user.</string>
    <string name="sl_ifo_titlr">Sun Lookup</string>
    <string name="lookup">Lookup</string>
    <string name="time_goes_here">Time goes here</string>
    <string name="message_goes_here">Message goes here</string>

    <!--SunLookup App end  Yue Shang -->


</resources>