<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homepage"
        android:icon="@drawable/ds_icons8home50"
        android:title="Item"
        app:showAsAction="always" />
    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_help"

        android:title="@string/deezer_help"

        app:showAsAction="never" />
    <item
        android:id="@+id/favoriteSong"
        android:icon="@drawable/ds_icons8heart50"


        android:title="@string/deezer_home"

        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ds_icons8search50white"


        android:title="@string/deezer_search"

        app:showAsAction="always" />
</menu>