<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sunlookup.SunActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="230dp"
        android:layout_height="600dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/include3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/Latitude"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_latitude"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/Enter_number"
            android:layout_marginLeft="20dp"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/Longitude"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_longitude"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/Enter_number"
            android:layout_marginLeft="20dp"
            android:inputType="numberDecimal"
            android:textSize="20sp" />



        <Button
            android:id="@+id/button_search"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/search"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Result"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_rise"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="SunRise:--:--:-- --"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textView_set"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="SunSet:--:--:-- --"
            android:textSize="20sp" />
        <Button
            android:id="@+id/button_save"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/yueword_save"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_read"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/yueword_history"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/favorite"
        app:layout_constraintLeft_toRightOf="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:text="@string/word_favorite"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:text="@string/Lat____Long"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/linear_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="137dp"
        android:layout_height="342dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/linear_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.00999999" />


    <include
        android:id="@+id/include3"
        layout="@layout/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>